# Credit-Risk-Project-PD-Estimation

./: .gitignore  README.md  pyproject.toml
datasets/processed/: credit_risk_dataset_discretized_final.csv  credit_risk_dataset_discretized_updated.csv  credit_risk_dataset_post_preprocess.csv
docs/: RAPPORT_DISCRETISATION_FINALE.txt
notebooks/: 0_preprocessing_credit_risk.ipynb  1_discretisation_finale_mixte.ipynb  2_Analyse_des_corrélations.ipynb  3_selection_des_variables.ipynb  4_grille_de_score.ipynb  5_segmentation.ipynb
result/1_discretisation/: RAPPORT_DISCRETISATION_FINALE.txt  discretization_boundaries_final.json  discretization_boundaries_updated.json  discretization_summary_final.csv
result/2_correlations/: test_chi2.xlsx
result/3_selection_variables/: Logit_Stepwise.xlsx  Logit_Stepwise_strict.xlsx  Logit_naif.xlsx  Logits_5_variables.xlsx
result/4_grille_de_score/: grille_score.xlsx  grille_score_roland_calculs.xlsx  grille_score_strict.xlsx  scores_clients.csv  scores_clients_strict.csv
result/5_segmentation_chr/: CHR_Summary.csv  CHR_Summary_strict.csv  clients_segmented_dtree.csv  clients_segmented_dtree_strict.csv
src/: __init__.py  update_discretization.py  utils.py
